@@ -3,7 +3,6 @@ package com.sip.syshumres_apirest.controllers;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import javax.validation.Valid;
 
@@ -31,6 +30,7 @@ import com.sip.syshumres_entities.dtos.common.EntitySelectDTO;
 import com.sip.syshumres_entities.enums.EmployeeTypeEnum;
 import com.sip.syshumres_exceptions.EntityIdNotFoundException;
 import com.sip.syshumres_exceptions.IdsEntityNotEqualsException;
+import com.sip.syshumres_exceptions.InvalidIdException;
 import com.sip.syshumres_exceptions.utils.ErrorsBindingFields;
 import com.sip.syshumres_services.EmployeePositionService;
 import com.sip.syshumres_utils.StringTrim;
@@ -59,32 +59,29 @@ public class EmployeePositionController extends CommonController {
 	@GetMapping(ACTIVE)
 	public ResponseEntity<List<EntitySelectDTO>> listActive() {
 		return ResponseEntity.ok().body(service.findByEnabledTrueOrderByDescription().stream()
-				.map(entity -> customMapper.toSelectDto(entity))
-				.collect(Collectors.toList()));
+				.map(customMapper::toSelectDto)
+				.toList());
 	}
 	
 	@GetMapping(ADM + ACTIVE)
 	public ResponseEntity<List<EntitySelectDTO>> listAdmActive() {
 		return ResponseEntity.ok().body(service.findByEnabledTrueOrderByDescription(EmployeeTypeEnum.ADM.getValue()).stream()
-				.map(entity -> customMapper.toSelectDto(entity))
-				.collect(Collectors.toList()));
+				.map(customMapper::toSelectDto)
+				.toList());
 	}
 	
 	@GetMapping(OPER + ACTIVE)
 	public ResponseEntity<List<EntitySelectDTO>> listOperActive() {
 		return ResponseEntity.ok().body(service.findByEnabledTrueOrderByDescription(EmployeeTypeEnum.OPER.getValue()).stream()
-				.map(entity -> customMapper.toSelectDto(entity))
-				.collect(Collectors.toList()));
+				.map(customMapper::toSelectDto)
+				.toList());
 	}
 	
 	@GetMapping(PAGE)
 	public ResponseEntity<Page<EmployeePositionDTO>> list(Pageable pageable) {
 		Page<EmployeePosition> entities = this.service.findByFilterSession(this.filter, pageable);
 		
-		Page<EmployeePositionDTO> entitiesPageDTO = entities.map(entity -> {
-			EmployeePositionDTO dto = customMapper.toDto(entity);
-		    return dto;
-		});
+		Page<EmployeePositionDTO> entitiesPageDTO = entities.map(customMapper::toDto);
 
 		return ResponseEntity.ok().body(entitiesPageDTO);
 	}
@@ -139,9 +136,9 @@ public class EmployeePositionController extends CommonController {
 	
 	@GetMapping(ID)
 	public ResponseEntity<EmployeePositionDTO> formEdit(@PathVariable Long id) 
-			throws EntityIdNotFoundException, IllegalArgumentException {
+			throws EntityIdNotFoundException, InvalidIdException {
 		if (id <= 0) {
-			throw new IllegalArgumentException("Id no puede ser cero o negativo");
+			throw new InvalidIdException();
 		}
 		Optional<EmployeePosition> entity = this.service.findById(id);
 		if(entity.isEmpty()) {
@@ -153,13 +150,13 @@ public class EmployeePositionController extends CommonController {
 	
 	@PutMapping(ID)
 	public ResponseEntity<?> edit(@Valid @RequestBody  EmployeePositionDTO entity, BindingResult result, @PathVariable Long id) 
-			throws EntityIdNotFoundException, IdsEntityNotEqualsException, IllegalArgumentException {
+			throws EntityIdNotFoundException, IdsEntityNotEqualsException, InvalidIdException {
 		if (result.hasErrors()) {
 			return ErrorsBindingFields.validate(result);
 		}
 		
 		if (id <= 0) {
-			throw new IllegalArgumentException("Id no puede ser cero o negativo");
+			throw new InvalidIdException();
 		}
 		if(!Objects.equals(id, entity.getId())){
 			throw new IdsEntityNotEqualsException("Ids de puesto no coinciden para actualización");
