@@ -3,7 +3,6 @@ package com.sip.syshumres_apirest.controllers;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import javax.validation.Valid;
 
@@ -54,14 +53,14 @@ public class PayrollTypeController extends CommonCatalogController {
 	public ResponseEntity<List<EntitySelectDTO>> listActive() {
 		return ResponseEntity.ok().body(service.findByEnabledTrueOrderByDescription().stream()
 				.map(entity -> modelMapper.map(entity, EntitySelectDTO.class))
-				.collect(Collectors.toList()));
+				.toList());
 	}
 	
 	@GetMapping(NORMAL + ACTIVE)
 	public ResponseEntity<List<EntitySelectDTO>> listNormalActive() {
 		return ResponseEntity.ok().body(service.findNormalByEnabledTrueOrderByDescription().stream()
 				.map(entity -> modelMapper.map(entity, EntitySelectDTO.class))
-				.collect(Collectors.toList()));
+				.toList());
 	}
 	
 	@PostMapping
