@@ -1,7 +1,6 @@
 package com.sip.syshumres_apirest.mappers;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import org.modelmapper.ModelMapper;
@@ -12,19 +11,19 @@ public class ListMapper {
 	@Autowired
 	private ModelMapper modelMapper;
 	
-	public ListMapper() {
+	public ListMapper() {// Noncompliant - method is empty
 	}
 	
 	public <S, T> List<T> mapList(List<S> source, Class<T> targetClass) {
 	    return source
 	      .stream()
 	      .map(element -> modelMapper.map(element, targetClass))
-	      .collect(Collectors.toList());
+	      .toList();
 	}
 	
 	public <T> List<T> toList(Iterable<T> iterable) {
 	    return StreamSupport.stream(iterable.spliterator(), false)
-	                        .collect(Collectors.toList());
+	                        .toList();
 	}
 	
 }
